@@ -82,6 +82,10 @@ LanguageTool Change Log
      size of the request queue - if it gets larger than this, requests will
      be rejected (503 Service unavailable)
 
+-GUI:
+    -The stand-alone GUI can now take a plain text file as an argument, this
+     file will then be loaded on startup (Github issue #232).
+
 -Command-line:
     -It is now possible to add an external rule file when calling LanguageTool from the
      command line. Use --rulefile <file> to add a file. If the file name has a format
